chore(knx): resolve a few comments

--- a/_cases/2022/DIVD-2022-00061.md
+++ b/_cases/2022/DIVD-2022-00061.md
@@ -1,23 +1,23 @@
 ---
 layout: case
-title: "KNXNet interfaces: secure your installation today!"
+title: "KNXNet/IP gateways often left open to the internet"
 author: Pepijn van der Stap
 lead: Pepijn van der Stap
 status: Open
-excerpt: DIVD is scanning for and notifying parties about KNXNet interfaces that are accessible from the internet.
+excerpt: DIVD is scanning for and notifying parties about KNXNet/IP gateways that are accessible from the internet.
 researchers:
 - Daan Keuper
-- Thijs Alkemade
+- Thijs 
 - Pepijn van der Stap
 - Lennaert Oudshoorn
 - Melvin Boers
 - Koen van Hove
 cves:
 - n/a 
-product: KNXNet protocol, KNXNet/IP router/interface
+product: KNXNet/IP gateways (various)
 versions: N/A 
-recommendation: "Close the port(s) that are used for KNXNet/IP communication. If you are using a KNXNet/IP router, make sure that it is not accessible via the internet."
-workaround: "If you are using a KNXNet/IP router, make sure that it is not accessible via the internet, for example by re-configuring the router to announce these routes only to the local network."
+recommendation: "Close the port(s) that are used for KNXNet/IP communication, often port 3671. If you are using a KNXNet/IP gateway, ensure that it is not accessible from the internet."
+workaround: "If you are using a KNXNet/IP gateway, make sure that it is not accessible via the internet, for example by re-configuring the router to announce these routes only to the local network."
 start: 2022-02-08
 end:
 timeline:
@@ -43,29 +43,30 @@ timeline:
 
 KNXNet is a protocol that is used to control home automation systems. It is used in many countries, including the Netherlands, Germany, France, and the United Kingdom. The protocol is used to control lights, heating, and other devices in a home. The protocol is also used in industrial automation systems. The protocol is used in many different ways, including via a KNXNet/IP router, which is a device that connects to a local network and allows KNXNet devices to communicate with each other.
 
-Often, KNX is set up by a professional installer. The installer is responsible for setting up the KNXNet/IP router and for securing it. However, it is also possible to set up KNX yourself. In this case, the KNXNet/IP router is often not secured. This means that it is possible to connect to the KNXNet/IP router and to control the KNX devices that are connected to it.
+Often, KNX is set up by a professional installer. The parties that are responsible for the KNXNet/IP gateway might have left the port that is used for KNXNet/IP communication open to the internet. This means that anyone can connect to the KNXNet/IP gateway and control the devices that are connected to it. This can be used to control lights, heating, and other devices in a home. It can also be used to control industrial automation systems. 
 
-After installing a KNXNet/IP router, it is possible to connect to it via a web interface. However, after the professional installer has set it up, the port should simply be closed; access it no longer needed. However, this is often not done. This means that the KNXNet/IP router is accessible via the internet. This is a problem because it is possible to connect to the KNXNet/IP router and to control the KNX devices that are connected to it.
+Configuration is often done via ETS, a software application that is used to configure KNXNet devices.  However, after the professional installer has set it up, the port should simply be closed; access it no longer needed. However, this is often not done which leads the KNXNet/IP interface publicly accessible on the internet. 
 
-For attackers, it is possible to connect to an interface built on top of the KNXNet protocol and to control KNX devices that are connected to it. 
+This is a problem because it is possible to connect to the KNXNet/IP interface and to control the KNX devices that are connected to it.  For attackers, it is possible to connect to an interface built on top of the KNXNet protocol and to control KNX devices that are connected to it. 
 
 This is a very serious security issue, because it means that it is possible to control devices in a home or in an industrial environment without the owner's permission; a form of unauthorized access. 
 
-Computest made a [report](https://www.computest.nl/en/news/news-and-press-releases/homes-offices-vulnerable-unsecure-domotica/) about this issue. DIVD has been working with Computest to investigate the possibility of informing parties of security issues in their home automation systems.
+Computest released a [report](https://www.computest.nl/en/news/news-and-press-releases/homes-offices-vulnerable-unsecure-domotica/) about these issues. DIVD has been working with Computest to investigate the possibility of informing parties of security issues in their home automation systems.
 
 We were able to reproduce the issue and have been able to find a way to scan for vulnerable KNXNet/IP routers. We will be informing parties with insecure home automation systems about this issue, in order to help them to secure their automation systems and to prevent unauthorized access to e.g. heating systems, lights, and other devices.
 
 ## What you can do
 
-We advise you to contact your installer to make sure that the KNXNet/IP router is no longer accessible via the internet and that the port(s) are closed.
-If you set up your KNXNet/IP router yourself, we advise you to close the port(s) that are used for KNXNet/IP communication.
+We advise you to contact your installer to make sure that the KNXNet/IP interface is no longer accessible via the internet and that the port(s) are closed.
+
+If you set up your home automation system yourself, make sure that the KNXNet/IP interface is not accessible via the internet and that the port(s) are closed.
 
 As described in ISO 22510:2019 the only way to properly secure KNX devices is for the protocol to reside in your local network. Port translation is not needed after the initial setup.
-If you are using a KNXNet/IP router, make sure that it is not accessible via the internet, for example by re-configuring the router to announce these routes only to the local network.
+If you are using a KNXNet/IP interface, make sure that it is not accessible via the internet, for example by re-configuring your router to announce these routes only to the local network.
 
 ## What we are doing
 
-We are actively scanning the internet for vulnerable KNXNet/IP routers and will notify system owners via the listed abuse contacts if we find any.
+We are actively scanning the internet for vulnerable KNXNet/IP interfaces and will notify system owners via the listed abuse contacts if we find any.
 
 {% include timeline.html %}
 
