chore(knx): also here

--- a/_cases/2022/DIVD-2022-00061.md
+++ b/_cases/2022/DIVD-2022-00061.md
@@ -53,7 +53,7 @@ This is a very serious security issue, because it means that it is possible to c
 
 Computest released a [report](https://www.computest.nl/en/news/news-and-press-releases/homes-offices-vulnerable-unsecure-domotica/) about these issues. DIVD has been working with Computest to investigate the possibility of informing parties of security issues in their home automation systems.
 
-We were able to reproduce the issue and have been able to find a way to scan for vulnerable KNXNet/IP routers. We will be informing parties with insecure home automation systems about this issue, in order to help them to secure their automation systems and to prevent unauthorized access to e.g. heating systems, lights, and other devices.
+We were able to reproduce the issue and have been able to find a way to scan for vulnerable KNXNet/IP gateways. We will be informing parties with insecure home automation systems about this issue, in order to help them to secure their automation systems and to prevent unauthorized access to e.g. heating systems, lights, and other devices.
 
 ## What you can do
 
