chore(knx): introduce Thijs Alkemade

--- a/_cases/2022/DIVD-2022-00061.md
+++ b/_cases/2022/DIVD-2022-00061.md
@@ -7,7 +7,7 @@ status: Open
 excerpt: DIVD is scanning for and notifying parties about KNXNet/IP gateways that are accessible from the internet.
 researchers:
 - Daan Keuper
-- Thijs 
+- Thijs Alkemade
 - Pepijn van der Stap
 - Lennaert Oudshoorn
 - Melvin Boers
