--- a/_cases/2022/DIVD-2022-00042.md
+++ b/_cases/2022/DIVD-2022-00042.md
@@ -2,7 +2,7 @@
 layout: case
 title: "Canon print portals facing the internet"
 author: Simon Kort
-lead: Lenneart Oudshoorn
+lead: Lennaert Oudshoorn
 excerpt: "Easily accessible Canon print portals facing towards the internet can lead to full access to the administration interface of the printer."
 status: Open
 start: 2022-08-18
