--- a/_cases/2022/DIVD-2022-00060.md
+++ b/_cases/2022/DIVD-2022-00060.md
@@ -31,6 +31,9 @@ timeline:
 - start: 2022-11-26
   end:
   event: "First version of this case file"
+- start: 2022-12-08
+  end:
+  event: "DIVD sends first emails to parties that remain vulnerable."
 
 ---
 
