chore(00055): bump casefile

--- a/_cases/2022/DIVD-2022-00055.md
+++ b/_cases/2022/DIVD-2022-00055.md
@@ -20,13 +20,19 @@ timeline:
 - start: 2022-10-08
   end:
   event: DIVD starts investigating the scope of management interfaces.
+- start: 2022-12-10
+  end:
+  event: DIVD starts looking for servers that are vulnerable to CVE-2013-4786.
+- start: 2022-12-11
+  end:
+  event: DIVD starts notifying the owners of servers affected by CVE-2013-4786.
 ips: n/a
 
 ---
 
 ## Summary
 
-DIVD started looking for  vulnerabilities regarding (hardware) server management interfaces, worldwide. These interfaces are often exposed to the internet and are not protected by default. This makes them a target for attackers. DIVD is researching vulnerabilities in (hardware) server management interfaces globally and notifying the owners of misconfigured services.
+DIVD started looking for vulnerabilities regarding (hardware) server management interfaces, worldwide. These interfaces are often exposed to the internet and are not protected by default. This makes them a target for attackers. DIVD is researching vulnerabilities in (hardware) server management interfaces globally and notifying the owners of misconfigured services.
 
 
 ## What you can do
@@ -38,7 +44,6 @@ IT and IT security teams should consider putting the instance on a separate netw
 ## What we are doing
 
 * DIVD is currently ensuring that the owners of vulnerable systems are being notified. We do this by scanning for exposed management interfaces, and then examining whether vulnerabilities are present and notifying the owners of these vulnerable systems with the issue and remediation information.
-* ```
 
 {% include timeline.html %}
 
