chore(00051): bump casefile

--- a/_cases/2022/DIVD-2022-00051.md
+++ b/_cases/2022/DIVD-2022-00051.md
@@ -34,7 +34,10 @@ timeline:
 - start: 2022-10-07
   end:
   event: First round of notifications sent
-ips: 144
+- start: 2022-12-11
+  end:
+  event: Second round of notifications sent
+ips: 151
 ---
 
 ## Summary
