Case can go live

--- a/_cases/2022/DIVD-2022-00063.md
+++ b/_cases/2022/DIVD-2022-00063.md
@@ -4,49 +4,83 @@ title: Memory overflow vulnerability in FortiOS SSL VPN
 author: Ralph Horn
 lead: Ralph Horn
 status: Open
-excerpt: DIVD is scanning for parties vulnerable to CVE-2022-$NUMBER
+excerpt: DIVD is scanning for parties vulnerable to CVE-2022-42475
 researchers:
 - Axel Boesenach
 - Victor Pasman
 - Frank Breedijk
 - Lennaert Oudshoorn
 - Ralph Horn
-
 cves:
-- CVE-2022-$NUMBER
-product: FortiOS SSL VPN
-versions: v7.2 to v7.2.2, v7.0.0 to 7.0.8, v6.4.0 to 6.4.10, 6.2.0 to 6.2.11 
+- CVE-2022-42475
+product: FortiOS, FortiOS-6K7K
+versions: 
+- FortiOS v7.2 to v7.2.2
+- FortiOS v7.0.0 to v7.0.8
+- FortiOS v6.4.0 to v6.4.10
+- FortiOS v6.2.0 to v6.2.11 
+- FortiOS v5.6.0 to v5.6.14
+- FortiOS v5.4.0 to v5.4.13
+- FortiOS v5.2.0 to v5.2.15
+- FortiOS v5.0.0 to v5.0.14
+- FortiOS-6K7K v7.0.0 to v7.0.7
+- FortiOS-6K7K v6.4.0 to v6.4.9
+- FortiOS-6K7K v6.2.0 to v6.2.11
+- FortiOS-6K7K v6.0.0 to v6.0.14
 recommendation: "Upgrade your affected installations to one of the fixed versions listed by Fortinet in their Security Advisory."
 workaround: "No workaround known"
-start: 2022-11-01
+start: 2022-12-12
 end:
 timeline:
 - start: 2022-11-01
   end:
-  event: "Fortinet releases the first patch for this vulnerability"
+  event: "Fortinet releases FortiOS 6.4.11 that contains a fix for CVE-2022-42475"
+- start: 2022-11-03
+  end:
+  event: "Fortinet releases FortiOS 6.2.12 that contains a fix for CVE-2022-42475"
+- start: 2022-11-10
+  end:
+  event: "Fortinet releases FortiOS 7.2.3 that contains a fix for CVE-2022-42475"
+- start: 2022-11-22
+  end:
+  event: "Fortinet releases FortiOS 7.0.9 that contains a fix for CVE-2022-42475"
 - start: 2022-12-12
   end:
   event: "DIVD starts tracking this vulnerability"
+- start: 2022-12-12
+  end:
+  event: "Fortinet releases advisorty [FG-IR-22-398](https://www.fortiguard.com/psirt/FG-IR-22-398)"
 
 ---
 
 ## Summary
 
-There is a memory overflow vulnerability in FortiOS SSL VPN which can be used to execute code on the system. There are multiple affected versions, and in their [Security Advisory]($ADVISORY_URL), Fortinet recommends to upgrade to one of the patched versions.
+There is a memory overflow vulnerability in FortiOS SSL VPN which can be used to execute code on the system. There are multiple affected versions, and in Fortinet's [FG-IR-22-398 security bulletin](https://www.fortiguard.com/psirt/FG-IR-22-398), Fortinet recommends to upgrade to one of the patched versions.
 
 
 ## What you can do
 
-We advise you to upgrade your instance to one of the listed patched versions in the [Security Advisory]($ADVISORY_URL)).
+We advise you to upgrade your instance to one of the listed patched versions in Fortinet's [FG-IR-22-398 security bulletin](https://www.fortiguard.com/psirt/FG-IR-22-398).
+
+Patched version are:
+* FortiOS version 7.2.3 or above
+* FortiOS version 7.0.9 or above
+* FortiOS version 6.4.11 or above
+* FortiOS version 6.2.12 or above
+* upcoming FortiOS-6K7K version 7.0.8 or above
+* FortiOS-6K7K version 6.4.10 or above
+* upcoming FortiOS-6K7K version 6.2.12 or above
+* FortiOS-6K7K version 6.0.15 or above
 
 
 ## What we are doing
 
-We are actively scanning the internet for FortiOS SSL VPN instances that have not yet upgraded to a patched version and will notify system owners via the listed abuse contacts.
+We are currently investigating if we van remotely fingerprint the version of these devices, or find anohter save way to determine if the device isvulenrable. When we are able to do this, we will actively scan the internet for vulnerable FortiOS sslvpnd instances and will notify system owners via the listed abuse contacts.
 
 {% include timeline.html %}
 
 ## More information
 
-* [Fortinet Security Advisory]($ADVISORY_URL)
+* Fortinet's [FG-IR-22-398 security bulletin](https://www.fortiguard.com/psirt/FG-IR-22-398)
 * [NIST CVE Listing](https://nvd.nist.gov/vuln/detail/CVE-2022-$NUMBER)
+* {% cve CVE-2022-42475 %}
