--- a/_cases/2022/DIVD-2022-00063.md
+++ b/_cases/2022/DIVD-2022-00063.md
@@ -75,7 +75,8 @@ Patched version are:
 
 ## What we are doing
 
-We are currently investigating if we van remotely fingerprint the version of these devices, or find anohter save way to determine if the device isvulenrable. When we are able to do this, we will actively scan the internet for vulnerable FortiOS sslvpnd instances and will notify system owners via the listed abuse contacts.
+We are currently investigating if we can remotely fingerprint the version of these devices, or find another safe way to determine if the device is vulnerable. When we are able to do this, we will actively scan the internet for vulnerable FortiOS sslvpnd instances and will notify system owners via the listed abuse contacts.
+
 
 {% include timeline.html %}
 
