--- a/_cases/2022/DIVD-2022-00063.md
+++ b/_cases/2022/DIVD-2022-00063.md
@@ -49,7 +49,8 @@ timeline:
   event: "DIVD starts tracking this vulnerability"
 - start: 2022-12-12
   end:
-  event: "Fortinet releases advisorty [FG-IR-22-398](https://www.fortiguard.com/psirt/FG-IR-22-398)"
+  event: "Fortinet releases advisory [FG-IR-22-398](https://www.fortiguard.com/psirt/FG-IR-22-398)"
+
 
 ---
 
