Updated case and new blogpost

--- a/_cases/2022/DIVD-2022-00063.md
+++ b/_cases/2022/DIVD-2022-00063.md
@@ -28,7 +28,7 @@ versions:
 - FortiOS-6K7K v6.2.0 to v6.2.11
 - FortiOS-6K7K v6.0.0 to v6.0.14
 recommendation: "Upgrade your affected installations to one of the fixed versions listed by Fortinet in their Security Advisory."
-workaround: "No workaround known"
+workaround: "Disable SSL VPN"
 start: 2022-12-12
 end:
 timeline:
@@ -50,6 +50,10 @@ timeline:
 - start: 2022-12-12
   end:
   event: "Fortinet releases advisory [FG-IR-22-398](https://www.fortiguard.com/psirt/FG-IR-22-398)"
+- start: 2022-12-13
+  event: "Partial fingerprint method developed, scanning"
+- start: 2022-12-14
+  event: "First batch of notifications, sent"
 
 
 ---
@@ -76,7 +80,9 @@ Patched version are:
 
 ## What we are doing
 
-We are currently investigating if we can remotely fingerprint the version of these devices, or find another safe way to determine if the device is vulnerable. When we are able to do this, we will actively scan the internet for vulnerable FortiOS sslvpnd instances and will notify system owners via the listed abuse contacts.
+We have developed a partial fingerprinting method for FortiOS version v7.2.x. With this methode we are scanning the the internet to identify vulnerable instances. We will send notifcations to the owners of vulnerable systems we can fingerprint via the registered abuse contacts.
+
+We will continue out investigating so see if we can remotely fingerprint other versions of these devices, or to find another safe way to determine if the device is vulnerable. When we are able to do this, we will include this in our scans so we are able to notify more owners of vulnerable systems.
 
 
 {% include timeline.html %}
