chore(00055): introduce nsm, dtc in timeline

--- a/_cases/2022/DIVD-2022-00055.md
+++ b/_cases/2022/DIVD-2022-00055.md
@@ -26,6 +26,9 @@ timeline:
 - start: 2022-12-11
   end:
   event: DIVD starts notifying the owners of servers affected by CVE-2013-4786.
+- start: 2022-12-14
+  end:
+  event: DIVD starts sharing information about the affected servers in the Netherlands with the Digital Trust Center & het Nederlands Security Meldpunt.
 ips: n/a
 
 ---
