--- a/_cases/2022/DIVD-2022-00025.md
+++ b/_cases/2022/DIVD-2022-00025.md
@@ -7,7 +7,7 @@ author: Victor Pasman
 lead: Victor Pasman
 redirect_from:
 - /DIVD-2022-00025/
-status : Open
+status : Closed
 researchers:
 - Lennaert Oudshoorn
 - Wietse Boonstra
@@ -42,7 +42,10 @@ timeline:
 - start: 2022-07-28
   end:
   event: Fourth batch of notifications sent
-
+- start: 2022-11-02
+  end:
+  event:  DIVD starts closing procedure including reporting
+ips: 766
 ---
 ## Summary
 
