Rectification FortiOS sslvpnd

--- a/_cases/2022/DIVD-2022-00063.md
+++ b/_cases/2022/DIVD-2022-00063.md
@@ -50,10 +50,12 @@ timeline:
 - start: 2022-12-12
   end:
   event: "Fortinet releases advisory [FG-IR-22-398](https://www.fortiguard.com/psirt/FG-IR-22-398)"
-- start: 2022-12-13
-  event: "Partial fingerprint method developed, scanning"
 - start: 2022-12-14
-  event: "First batch of notifications, sent"
+  event: "Partial fingerprint method developed, scanning"
+- start: 2022-12-16
+  event: "First batch of notifications, sent to incorrect list"
+- start: 2022-12-17
+  event: "DIVD publishes rectification and sends rectification e-mails"
 
 
 ---
@@ -62,10 +64,14 @@ timeline:
 
 There is a memory overflow vulnerability in FortiOS SSL VPN which can be used to execute code on the system. There are multiple affected versions, and in Fortinet's [FG-IR-22-398 security bulletin](https://www.fortiguard.com/psirt/FG-IR-22-398), Fortinet recommends to upgrade to one of the patched versions.
 
+DIVD has created a partial fingerprinting method and is warning those that are running a known vulnerable version.
+
+Unfortunately on 16-12 notifications were sent to a too broad audience. We apologize for this mishap. In the coming days, we will rescan and sent out new notifications to the correct addresses.
+
 
 ## What you can do
 
-We advise you to upgrade your instance to one of the listed patched versions in Fortinet's [FG-IR-22-398 security bulletin](https://www.fortiguard.com/psirt/FG-IR-22-398).
+If you are running FortiNet equipment running FortiOS, we advise you to upgrade your instance to one of the listed patched versions in Fortinet's [FG-IR-22-398 security bulletin](https://www.fortiguard.com/psirt/FG-IR-22-398).
 
 Patched version are:
 * FortiOS version 7.2.3 or above
