--- a/_cases/2022/DIVD-2022-00025.md
+++ b/_cases/2022/DIVD-2022-00025.md
@@ -22,7 +22,7 @@ recommendation: If you receive an email from DIVD referring to this case, the vu
 patch_status: Available
 -workaround: 
 start: 2022-04-12
-end:
+end: 2022-12-01
 timeline:
 - start: 2022-04-12
   end:
