--- a/_cases/2022/DIVD-2022-00020.md
+++ b/_cases/2022/DIVD-2022-00020.md
@@ -37,12 +37,13 @@ timeline:
 - start: 2022-10-25
   end:
   event: Limited Disclosure
----
 jekyll-secinfo:
   cve:
     url: /cves/CVE-
+---
+
 ## Summary
-By leveraging the vulnerabilities, an unauthenticated attacker with network access to the application using Feathers.js can execute arbitrary system commands.
+By leveraging the vulnerabilities, an unauthenticated attacker with network access to the application using Feathers.js and Sequelize.js can perform SQL-injections.
 
 ## What you can do
 We recommend to use the latest version of Feathers.js
