--- a/_cases/2022/DIVD-2022-00064.md
+++ b/_cases/2022/DIVD-2022-00064.md
@@ -6,7 +6,7 @@ lead: Max van der Horst
 status: Open
 excerpt: "Multiple injection vulnerabilities have been identified within Axiell Iguana CMS, each of which can lead to compromise of the system." 
 researchers:
-- Amr Al Hallak (reporter and finder)
+- Amr Al Hallak (external reporter and finder)
 - Frank Breedijk
 - Max van der Horst
 cves:
