--- a/_cases/2022/DIVD-2022-00064.md
+++ b/_cases/2022/DIVD-2022-00064.md
@@ -39,7 +39,9 @@ timeline:
 - start: 2023-01-03
   end:
   event: "Limited disclosure."
-
+jekyll-secinfo:
+  cve:
+    url: /cves/CVE-
 ---
 
 ## Summary
