--- a/_cases/2022/DIVD-2022-00064.md
+++ b/_cases/2022/DIVD-2022-00064.md
@@ -36,6 +36,9 @@ timeline:
 - start: 2022-11-21
   end:
   event: "Researcher reports two additional vulnerabilities (SSRF and Reflected XSS)."
+- start: 2022-11-21
+  end:
+  event: "DIVD contacts Axiell about the additional vulnerabilities."
 - start: 2023-01-03
   end:
   event: "Limited disclosure."
