--- a/_cases/2022/DIVD-2022-00064.md
+++ b/_cases/2022/DIVD-2022-00064.md
@@ -30,7 +30,10 @@ timeline:
 - start: 2022-11-03
   end:
   event: "Axiell releases Iguana 4.5.02, which contains a fix for CVE-2022-45049, CVE-2022-45050, CVE-2022-45051 and CVE-2022-45052."
-- start: 2022-11-16
+- start: 2022-09-08
+  end: 2022-11-03
+  event: Time to acknowledge first 4 CVEs
+- start: 2022-11-03
   end:
   event: "First contact between Axiell and DIVD."
 - start: 2022-11-17
