--- a/_cases/2022/DIVD-2022-00064.md
+++ b/_cases/2022/DIVD-2022-00064.md
@@ -47,7 +47,7 @@ timeline:
   event: "DIVD contacts Axiell about the additional vulnerabilities."
 - start: 2023-01-03
   end:
-  event: "Limited disclosure."
+  event: "Limited disclosure first four CVEs"
 jekyll-secinfo:
   cve:
     url: /cves/CVE-
