--- a/_cases/2022/DIVD-2022-00064.md
+++ b/_cases/2022/DIVD-2022-00064.md
@@ -48,6 +48,12 @@ timeline:
 - start: 2023-01-03
   end:
   event: "Limited disclosure first four CVEs"
+- start: 2022-11-21
+  end: open
+  event: Time to acknowldge additional two vulnerabilities
+- start: 2022-11-21
+  end: open
+  event: Time to fix additional two vulnerabilities
 jekyll-secinfo:
   cve:
     url: /cves/CVE-
