chore(00055): bump timeline to reflect activities

--- a/_cases/2022/DIVD-2022-00055.md
+++ b/_cases/2022/DIVD-2022-00055.md
@@ -29,6 +29,9 @@ timeline:
 - start: 2022-12-14
   end:
   event: DIVD shares information about the affected servers in the Netherlands with the Digital Trust Center & het Nederlands Security Meldpunt.
+- start: 2023-01-08
+  end:
+  event: DIVD performs another worldwide scan for vulnerable management interfaces, informing the owners of the affected servers and shares relevant data with Digital Trust Center & het Nederlands Security Meldpunt.
 ips: n/a
 
 ---
