chore(00053): bump timeline to reflect activities

--- a/_cases/2022/DIVD-2022-00053.md
+++ b/_cases/2022/DIVD-2022-00053.md
@@ -30,6 +30,9 @@ timeline:
 - start: 2022-10-11
   end:
   event: "DIVD starts second round of notifications."
+- start: 2022-11-11
+  end:
+  event: "DIVD starts third round of notifications."
 
 ---
 
