Updated case file to close case

--- a/_cases/2022/DIVD-2022-00012.md
+++ b/_cases/2022/DIVD-2022-00012.md
@@ -23,7 +23,7 @@ versions: any
 recommendation: "If you received a notification of a vulnerability, patch your system with the information provided in this notification."
 -workaround: n/a
 start: 2022-02-22
-end:
+end: 2023-01-12
 timeline:
 - start: 2022-02-22
   end:
