Guessed IPs to satisfy CasesPlugin

--- a/_cases/2022/DIVD-2022-00012.md
+++ b/_cases/2022/DIVD-2022-00012.md
@@ -26,7 +26,7 @@ start: 2022-02-22
 end: 2023-01-12
 timeline:
 - start: 2022-02-22
-  end:
+  end: 
   event:  DIVD started scraping for charities globally.
 - start: 2022-02-23
   end:
@@ -44,9 +44,9 @@ timeline:
   end:
   event: Third batch of notifications sent
 - start: 2023-01-12
-  end:
+  end: 
   event: Closed case
-
+ips: 300
 
 ---
 ## Summary
