--- a/_cases/2023/DIVD-2023-00001.md
+++ b/_cases/2023/DIVD-2023-00001.md
@@ -1,7 +1,7 @@
 ---
 layout: case
 title: Citrix systems vulnerable for CVE-2022-27510  and/or CVE-2022-27518
-excerpt: "Based on scanning data obtained fro Fox-IT, DIVD is notifying owners of vulnerable Citrix ADCV and Gateway systems"
+excerpt: "Based on scanning data obtained from Fox-IT, DIVD is notifying owners of vulnerable Citrix ADCV and Gateway systems"
 author: Frank Breedijk
 lead: Frank Breedijk
 researchers:
