--- a/_cases/2023/DIVD-2023-00001.md
+++ b/_cases/2023/DIVD-2023-00001.md
@@ -69,7 +69,7 @@ This vulnerability allows an attacker allows an attack to remotely take control 
 
 ### {% cve 2022-27518 %}  - Unauthenticated remote arbitrary code execution
 
-This vulnerability allows an attacker to take over an appliance if it is confugured as a SAML Service Provider or SAML Identity Provider.
+This vulnerability allows an attacker to take over an appliance if it is configured as a SAML Service Provider or SAML Identity Provider.
 
 
 
