--- a/_cases/2023/DIVD-2023-00001.md
+++ b/_cases/2023/DIVD-2023-00001.md
@@ -75,7 +75,7 @@ This vulnerability allows an attacker to take over an appliance if it is configu
 
 ## What you can do
 
-If you are running a Citrix server that has not been patched to a non-vulnerable version, we recomment you patch it, especially if you are using one of the following features:
+If your Citrix server hasn't been updated to a secure version, we strongly advise you to patch it, especially if you're utilizing any of the following features:
 * SSL VPN
 * ICA Proxy
 * CVPN
