--- a/_cases/2023/DIVD-2023-00001.md
+++ b/_cases/2023/DIVD-2023-00001.md
@@ -87,7 +87,7 @@ If you are not using one of these servers we still recommend that you patch to a
 
 ## What we are doing
 
-Fox-IT is sharing lists with vulnerable systems on a regular basis and DIVD is sending out notifications to owers of vulnerable systems.
+Fox-IT is sharing lists with vulnerable systems on a regular basis and DIVD is sending out notifications to owners of vulnerable systems.
 
 {% comment %}  Leave this here, so we see a timeline {% endcomment %}
 {% include timeline.html %}
