--- a/_cases/2023/DIVD-2023-00001.md
+++ b/_cases/2023/DIVD-2023-00001.md
@@ -65,7 +65,7 @@ These two of CVEs are critical.
 
 ### {% cve CVE-2022-27510 %} - Unauthorized access to Gateway user capabilities
 
-This vulnerability allows an attacker allows an attack to remotely take control over an appliance if is is "operating as a Gateway (SSL VPN, ICA Proxy, CVPN, RDP Proxy)"
+This vulnerability leaves your appliance open to being taken over remotely by an attacker, if it is "operating as a Gateway (SSL VPN, ICA Proxy, CVPN, RDP Proxy)"
 
 ### {% cve 2022-27518 %}  - Unauthenticated remote arbitrary code execution
 
