Fixed some typos

--- a/_cases/2023/DIVD-2023-00001.md
+++ b/_cases/2023/DIVD-2023-00001.md
@@ -1,17 +1,17 @@
 ---
 layout: case
 title: Citrix systems vulnerable for CVE-2022-27510  and/or CVE-2022-27518
-excerpt: "Based on scanning data obtained from Fox-IT, DIVD is notifying owners of vulnerable Citrix ADCV and Gateway systems"
+excerpt: "Based on scanning data obtained from Fox-IT, DIVD is notifying owners of vulnerable Citrix ADC and Gateway systems"
 author: Frank Breedijk
 lead: Frank Breedijk
 researchers:
-- Yun Hun (Fox-IT)
+- Yun Hu (Fox-IT)
 cves:
 - CVE-2022-27510
 - CVE-2022-27518
 product: 
 - Citrix ADC
-- Citrix Gameway
+- Citrix Gateway
 versions: 
 - Citrix ADC and Citrix Gateway 13.1 before 13.1-33.47 (CVE-2022-27510)
 - Citrix ADC and Citrix Gateway 13.0 before 13.0-88.12 (CVE-2022-27510)
