--- a/_cases/2022/DIVD-2022-00060.md
+++ b/_cases/2022/DIVD-2022-00060.md
@@ -34,6 +34,12 @@ timeline:
 - start: 2022-12-08
   end:
   event: "DIVD sends first emails to parties that remain vulnerable."
+- start: 2022-01-18
+  end:
+  event: "DIVD conducts a rescan"
+- start: 2022-01-20
+  end:
+  event: "DIVD sends a second round of notifications."
 
 ---
 
