--- a/_cases/2023/DIVD-2023-00002.md
+++ b/_cases/2023/DIVD-2023-00002.md
@@ -2,7 +2,7 @@
 layout: case
 title: "Public Malicious Webshells"
 author: Max van der Horst
-lead: Max van der Horst
+lead: Ralph Horn
 status: Open
 excerpt: "DIVD is searching the Internet for public malicious webshells."
 researchers:
