--- a/_cases/2023/DIVD-2023-00002.md
+++ b/_cases/2023/DIVD-2023-00002.md
@@ -21,7 +21,7 @@ end:
 timeline:
 - start: 2023-01-06
   end:
-  event: "DIVD starts sorting Project Observer data.
+  event: "DIVD starts sorting Project Observer data."
 - start: 2023-01-19
   end: 
   event: "DIVD starts indexing common webshell locations."
