--- a/_cases/2023/DIVD-2023-00002.md
+++ b/_cases/2023/DIVD-2023-00002.md
@@ -1,10 +1,10 @@
 ---
 layout: case
-title: "Public Malicious Webshells"
+title: "Publicly Reachable Malicious Webshells"
 author: Max van der Horst
 lead: Max van der Horst
 status: Open
-excerpt: "DIVD is searching the Internet for public malicious webshells."
+excerpt: "DIVD is searching the Internet for publicly reachable malicious webshells."
 researchers:
 - Ralph Horn
 - Pepijn van der Stap
@@ -32,11 +32,11 @@ timeline:
 
 ## Summary
 
-DIVD is currently scanning the Internet for commonly known malicious webshells. These webshells often serve as an initial access method and/or persistency measure for malicious actors and are usually exposed to the Internet. DIVD is researching ways to identify these webshells and notifying the owners of compromised servers.
+DIVD is currently scanning the Internet for commonly known malicious webshells. These webshells often serve as an initial access method and/or persistency measure for malicious actors and are usually exposed to the Internet. Having one of these web shells on your system (nearly) always means a system has been compromised. DIVD is researching ways to identify these webshells and notifying the owners of compromised servers.
 
 ## What you can do
 
-Remove the files associated to the webshell from your server and investigate your infrastructure for malicious activity.
+Remove the files associated to the webshell from your server as soon as possible and start an investigation on your infrastructure to determine how the how the web shell was installed and if the threat actor is still present inside your IT infrastructure.
 
 ## What we are doing
 
