--- a/_cases/2023/DIVD-2023-00003.md
+++ b/_cases/2023/DIVD-2023-00003.md
@@ -37,7 +37,7 @@ An unauthenticated OS Command Injection vulnerability has been identified inside
 
 ## What you can do
 
-Upgrade your CentOS CWP version as soon as possible.
+Upgrade your CentOS CWP version to the patched version of 0.9.8.1147 or 0.9.8.1149 (latest).
 
 ## What we are doing
 
