--- a/_cases/2022/DIVD-2022-00065.md
+++ b/_cases/2022/DIVD-2022-00065.md
@@ -56,7 +56,7 @@ ips: 1
 ---
 ## Summary
 
-On February 15th 2022, [Sec Consult](https://sec-consult.com) published an advisory regarding multiple vulnerabilities on various [Zyxel](zyxel.com) devices.
+On February 15th 2022, [Sec Consult](https://sec-consult.com) published an advisory regarding multiple vulnerabilities on various [Zyxel](https://zyxel.com) devices.
 While some of these devices could be patched, others were EOL (end of life) and would not receive a patch. DIVD has performed scans of these devices, to notify owners/operators of the risks regarding the continued operation of these devices.
 
 ## What you can do
