--- a/_cases/2022/DIVD-2022-00065.md
+++ b/_cases/2022/DIVD-2022-00065.md
@@ -3,9 +3,9 @@ layout: case
 title: Multiple Critical Vulnerabilities in multiple Zyxel EOL devices
 excerpt: "Based on disclosure by Sec Consult, DIVD performed scans of end of life device impacted by multiple vulnerabilities."
 author: Rutger Hermens
-lead: Mick Beers
+lead: Mick Beer
 researchers:
-- Mick Beers
+- Mick Beer
 - Pepijn van der Stap
 - Lennaert Oudshoorn
 - Rutger Hermens
