--- a/_cases/2022/DIVD-2022-00065.md
+++ b/_cases/2022/DIVD-2022-00065.md
@@ -50,7 +50,7 @@ timeline:
   event: "DIVD starts exploring the possibility of EOL devices still being operated, and how to best determine vulnerabilities"
 - start: 2023-01-24
   end:
-  event: "DIVD scans and notifies owners/oprators of EOL devices"  
+  event: "DIVD scans and notifies owners/operators of EOL devices"  
 ips: 1
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 ---
