--- a/_cases/3000/DIVD-3000-00001.md
+++ b/_cases/3000/DIVD-3000-00001.md
@@ -1,5 +1,6 @@
 ---
 layout: case
+# Title and excerpt will be used on /cases and the RSS feed so make sure they reflect the case well
 title: This is a template for a case where we scanned but did not find the vuln
 excerpt: "Please set this to and except of a few lines.
 Excerpts are shown on /cases"
@@ -8,6 +9,7 @@ lead: Tom Wolters
 researchers:
 - Diego Klinkhamer
 - Tom Wolters
+# You can use free text here as well. E.g. to indicate that some vulnerabilities don't have CVEs assigned (yet).
 cves:
 - n/a
 - Multiple
@@ -20,7 +22,7 @@ versions:
 - Again one per line
 recommendation: This is where you type you recommended action for those reading this case
 patch_status: Full patched
--workaround: n/a
+#workaround: n/a
 status : Open
 start: 2021-12-07
 end: 
@@ -40,8 +42,9 @@ timeline:
 - start: 2022-01-18
   end:
   event: "DIVD sent out a first batch of notifications."
-ips: 0 
-# You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
+# ips: 0 
+# ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
+# This field becomes mandatory when the case status is set to 'Closed'
 ---
 ## Summary
 
