--- a/_cases/3000/DIVD-3000-00002.md
+++ b/_cases/3000/DIVD-3000-00002.md
@@ -1,5 +1,6 @@
 ---
 layout: case
+# Title and excerpt will be used on /cases and the RSS feed so make sure they reflect the case well
 title: This is a template for a case where found 0 days
 excerpt: "Please set this to and except of a few lines.
 Excerpts are shown on /cases"
@@ -8,6 +9,7 @@ lead: Tom Wolters
 researchers:
 - Diego Klinkhamer
 - Tom Wolters
+# You can use free text here as well. E.g. to indicate that some vulnerabilities don't have CVEs assigned (yet). But, given that we discovered that you should always be able to get a CVE id from @cna_admins on Slack
 cves:
 - n/a
 - Multiple
@@ -39,10 +41,12 @@ timeline:
   end:   open
   event: "Time to patch"
   # Time to patch is antoher important metric
-ips: 0 
-# You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
-#
+# ips: 0 
+# ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
+# This field becomes mandatory when the case status is set to 'Closed'
+
 # The lines below redirect all the CVE references to our site
+# Uncommend these lines if we are the CNA of record. (ask @cna_admins on Slack if you don't know)
 #jekyll-secinfo:
 #  cve:
 #    url: /cves/CVE-
