Apply suggestions from code review
Edits to patch-status
ips commented out
rewriting some sentences/descriptions.

Co-authored-by: Frank Breedijk <frank@breedijk.net>

--- a/_cases/2022/DIVD-2022-00065.md
+++ b/_cases/2022/DIVD-2022-00065.md
@@ -36,7 +36,7 @@ models:
 - PMG5317-T20A	EOL
 
 recommendation: Retire impacted devices
-#patch_status: Fully patched
+patch_status: “Devices are end-of-life and will not be patched”
 #workaround: n/a
 status : Open
 start: 2022-12-19
@@ -51,17 +51,17 @@ timeline:
 - start: 2023-01-24
   end:
   event: "DIVD scans and notifies owners/operators of EOL devices"  
-ips: 1
+#ips: 1
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 ---
 ## Summary
 
 On February 15th 2022, [Sec Consult](https://sec-consult.com) published an [advisory](https://seclists.org/fulldisclosure/2022/Feb/37) regarding multiple vulnerabilities on various [Zyxel](https://zyxel.com) devices.
-While some of these devices could be patched, others were EOL (end of life) and would not receive a patch. DIVD has performed scans of these devices, to notify owners/operators of the risks regarding the continued operation of these devices.
+While some of these devices could be patched, others were EOL (end of life) and will not receive a patch. DIVD has performed scans for these devices, to notify owners/operators of the risks regarding the continued operation of these devices.
 
 ## What you can do
 
-If you currently own or operate any of the listed EOL devices, please consider retiring it as soon as possible. If, for whatever reason, this is not a possibility, make sure all internet facing ports are closed as much as possible.
+If you currently own or operate any of the listed EOL devices, please consider retiring/replacing it as soon as possible. If, for whatever reason, this is not a possibility, make sure all internet facing ports are closed as much as possible.
 
 If you came here through other means than through our direct mailing, please refer to the [list published by Sec Consult and Zyxel](https://www.zyxel.com/global/en/support/security-advisories/zyxel-security-advisory-for-multiple-vulnerabilities-affected-model-list), to determine whether your Zyxel device is vulnerable and if a patch might be available, if your device isn't EOL. 
 
