--- a/_cases/2022/DIVD-2022-00065.md
+++ b/_cases/2022/DIVD-2022-00065.md
@@ -10,7 +10,8 @@ researchers:
 - Lennaert Oudshoorn
 - Rutger Hermens
 cves:
-- n/a
+- CVE-2022-4510
+- The researchers described a total of 8 vulnerabilities of which 7 have not been assigned a CVE.
 product: 
 - Zyxel
 models: 
