Fixing minor typos

--- a/_cases/2023/DIVD-2023-00001.md
+++ b/_cases/2023/DIVD-2023-00001.md
@@ -56,16 +56,16 @@ ips: 0
 ---
 ## Summary
 
-When [Fox-IT](https://www.fox-it.com/) researcher [Yun Hu](https://www.linkedin.com/in/yunzhenghu/) read the these two [security](https://support.citrix.com/article/CTX463706/citrix-gateway-and-citrix-adc-security-bulletin-for-cve202227510-cve202227513-and-cve202227516)
-* [Citrix security bulletin for CVE-2022-27518](https://support.citrix.com/article/CTX474995) [bulletins](https://support.citrix.com/article/CTX474995/citrix-adc-and-citrix-gateway-security-bulletin-for-cve202227518) from Citrix, he decided that it was time to start scanning the internet for Citrix servers vulnerable to {% cve cve-2022-27510 %} and (later) {% cve 2022-27518 %}. And he has publisched a very nice [blog post](https://blog.fox-it.com/2022/12/28/cve-2022-27510-cve-2022-27518-measuring-citrix-adc-gateway-version-adoption-on-the-internet/)
+When [Fox-IT](https://www.fox-it.com/) researcher [Yun Hu](https://www.linkedin.com/in/yunzhenghu/) read these two [security](https://support.citrix.com/article/CTX463706/citrix-gateway-and-citrix-adc-security-bulletin-for-cve202227510-cve202227513-and-cve202227516)
+* [Citrix security bulletin for CVE-2022-27518](https://support.citrix.com/article/CTX474995) [bulletins](https://support.citrix.com/article/CTX474995/citrix-adc-and-citrix-gateway-security-bulletin-for-cve202227518) from Citrix, he decided that it was time to start scanning the internet for Citrix servers vulnerable to {% cve cve-2022-27510 %} and (later) {% cve 2022-27518 %}. And he has published a very nice [blog post](https://blog.fox-it.com/2022/12/28/cve-2022-27510-cve-2022-27518-measuring-citrix-adc-gateway-version-adoption-on-the-internet/).
 
-Early Jan 2023 Fox-IT and DIVD agreed to cooperate and share data so that DIVD can warn the owners of vulnerable systems.
+Early Jan 2023, Fox-IT and DIVD agreed to cooperate and share data so that DIVD could warn the owners of vulnerable systems.
 
 These two of CVEs are critical. 
 
 ### {% cve CVE-2022-27510 %} - Unauthorized access to Gateway user capabilities
 
-This vulnerability leaves your appliance open to being taken over remotely by an attacker, if it is "operating as a Gateway (SSL VPN, ICA Proxy, CVPN, RDP Proxy)"
+This vulnerability leaves your appliance open to being taken over remotely by an attacker if it is "operating as a Gateway (SSL VPN, ICA Proxy, CVPN, RDP Proxy)"
 
 ### {% cve 2022-27518 %}  - Unauthenticated remote arbitrary code execution
 
@@ -87,7 +87,7 @@ If you are not using one of these servers we still recommend that you patch to a
 
 ## What we are doing
 
-Fox-IT is sharing lists with vulnerable systems on a regular basis and DIVD is sending out notifications to owners of vulnerable systems.
+Fox-IT is sharing lists with vulnerable systems on a regular basis, and DIVD is sending out notifications to owners of vulnerable systems.
 
 {% comment %}  Leave this here, so we see a timeline {% endcomment %}
 {% include timeline.html %}
