--- a/_cases/2023/DIVD-2023-00003.md
+++ b/_cases/2023/DIVD-2023-00003.md
@@ -33,7 +33,7 @@ timeline:
 
 ## Summary
 
-An unauthenticated OS Command Injection vulnerability has been identified inside CentOS CWP 7 before version 0.9.8.1147. The login/index.php endpoint contains a vulnerable parameter, allowing unauthenticated attackers to execute bash commands. Misuse of this vulnerability could lead to compromise of your system.
+An unauthenticated OS Command Injection vulnerability has been identified inside CentOS CWP 7 before version 0.9.8.1147. The login/index.php endpoint contains a vulnerable parameter, allowing unauthenticated attackers to execute bash commands. Misuse of this vulnerability could lead to the compromise of your system.
 
 ## What you can do
 
@@ -41,7 +41,7 @@ Upgrade your CentOS CWP version to the patched version of 0.9.8.1147 or 0.9.8.11
 
 ## What we are doing
 
-DIVD is currently working to identify vulnerable parties and notifying these. We do this by scanning for exposed CWP instances and examining this instance to determine whether the vulnerability is present. Owners of vulnerable instances receive a notification with the host information and remediation steps. 
+DIVD is currently working to identify vulnerable parties and notify these. We do this by scanning for exposed CWP instances and examining this instance to determine whether the vulnerability is present. Owners of vulnerable instances receive a notification with the host information and remediation steps. 
 
 {% include timeline.html %}
 
