--- a/_cases/2023/DIVD-2023-00004.md
+++ b/_cases/2023/DIVD-2023-00004.md
@@ -12,30 +12,30 @@ cves:
 - CVE-2022-47966
 product: Zoho ManageEngine OnPremise
 versions: 
-- Access Manager Plus: < 4307
-- Active Directory 360: < 4309
-- ADAudit Plus: < 7080
-- ADManager Plus: < 7161
-- ADSelfService Plus: < 6210
-- Analytics Plus: < 5140
-- Application Control Plus: < 10.1.2220.17
-- Asset Explorer: < 6982
-- Browser Security Plus: < 11.1.2238.5
-- Device Control Plus: < 10.1.2220.17
-- Endpoint Central: < 10.1.2228.10
-- Endpoint Central MSP: < 10.1.2228.10
-- Endpoint DLP: < 10.1.2137.5
-- Key Manager Plus: < 6400
-- OS Deployer: < 1.1.2243.0
-- PAM 360: < 5712
-- Password Manager Pro: < 12123
-- Patch Manager Plus: < 10.1.2220.17
-- Remote Access Plus: < 10.1.2228.10
-- Remote Monitoring and Management: < 10.1.40
-- ServiceDesk Plus: < 14003
-- ServiceDesk Plus MSP: < 13000
-- SupportCenter Plus: 11017 to 11025
-- Vulnerability Manager Plus: < 10.1.2220.17
+- "Access Manager Plus: < 4307"
+- "Active Directory 360: < 4309"
+- "ADAudit Plus: < 7080"
+- "ADManager Plus: < 7161"
+- "ADSelfService Plus: < 6210"
+- "Analytics Plus: < 5140"
+- "Application Control Plus: < 10.1.2220.17"
+- "Asset Explorer: < 6982"
+- "Browser Security Plus: < 11.1.2238.5"
+- "Device Control Plus: < 10.1.2220.17"
+- "Endpoint Central: < 10.1.2228.10"
+- "Endpoint Central MSP: < 10.1.2228.10"
+- "Endpoint DLP: < 10.1.2137.5"
+- "Key Manager Plus: < 6400"
+- "OS Deployer: < 1.1.2243.0"
+- "PAM 360: < 5712"
+- "Password Manager Pro: < 12123"
+- "Patch Manager Plus: < 10.1.2220.17"
+- "Remote Access Plus: < 10.1.2228.10"
+- "Remote Monitoring and Management: < 10.1.40"
+- "ServiceDesk Plus: < 14003"
+- "ServiceDesk Plus MSP: < 13000"
+- "SupportCenter Plus: 11017 to 11025"
+- "Vulnerability Manager Plus: < 10.1.2220.17"
 
 
 recommendation: "Update your ManageEngine instance to the next version. The patched version is the next version number for all vulnerable versions (e.g. 4307 > 4308)."
