--- a/_cases/2023/DIVD-2023-00007.md
+++ b/_cases/2023/DIVD-2023-00007.md
@@ -45,7 +45,8 @@ Update your ESXi hypervisor to one of the mentioned patched versions as soon as 
 
 ## What we are doing
 
-DIVD is currently gathering data and scanning for potential targets of this ransomware attack. The parties found to be vulnerable to CVE-2021-21974 receive notification with instructions on how to resolve this issue.
+DIVD is currently gathering data and scanning to identify systems (potentially) vulnerable to {% cve 2021-21974 %}, which are potential targets for this ransomware attack. The parties responsible for ip space containing servers found to be vulnerable to CVE-2021-21974 will receive notification with instructions on how to resolve this issue.
+
 
 {% include timeline.html %}
 
